[package]
name = "snes-emu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

bytemuck = { version = "1.16.1", features = ["derive"] }
arbitrary-int = "2.1.0"

winit = "0.30.12"
wgpu = "27.0.1"
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
egui_dock = "0.18.0"
egui_extras = "0.33.3"
egui_memory_editor = "0.2.14"

pollster = "0.4.0"
rfd = "0.17.2"
directories = "6.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"

[profile.dev]
opt-level = 1
