[package]
name = "snes-emu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

bytemuck = { version = "1.16.1", features = ["derive"] }
arbitrary-int = "2.1.0"

winit = "0.30.12"
wgpu = { version = "27.0.1", features = ["webgl"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui_dock = "0.18.0"
egui_extras = "0.33.3"
egui_memory_editor = "0.2.14"

rfd = "0.17.2"
directories = "6.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.33.3"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
egui-winit = { version = "0.33.3", default-features = false, features = [
    "links",
    "wayland",
    "x11",
] }
web-sys = { version = "0.3.85", features = ["Document"] }
wasm-bindgen-futures = "0.4.58"

[profile.dev]
opt-level = 1
