[package]
name = "snes-emu"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

bytemuck = { version = "1.25.0", features = ["derive"] }
arbitrary-int = "2.1.1"

winit = "0.30.13"
wgpu = { version = "29.0.0", features = ["webgl"] }
egui = "0.35.0"
egui-wgpu = "0.35.0"
egui_dock = "0.20.1"
egui_extras = "0.35.0"
egui_memory_editor = { git = "https://github.com/LukasKarsten/egui_memory_editor.git" }

rfd = "0.17.2"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
web-time = "1.1.0"
rustc-hash = "2.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.35.0"
pollster = "1.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
egui-winit = { version = "0.35.0", default-features = false, features = [
    "links",
    "wayland",
    "x11",
] }
web-sys = { version = "0.3.103", features = ["Document"] }
wasm-bindgen-futures = "0.4.76"

[profile.dev]
opt-level = 1
